<resources>
    <string name="app_name">TrelloLike</string>

    <!-- Login View -->
    <string name="complete_profile_subtitle">Complete your profile</string>

    <string name="login_button">Login</string>
    <string name="login_create_account">No account yet? Create one</string>

    <!-- Common Login & Signup Views -->
    <string name="login_subtitle">Mobile version</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>

    <!-- Signup View -->
    <string name="input_repeat_password">Repeat password</string>
    <string name="signup_button">Create Account</string>
    <string name="already_an_account">Already a member? Login</string>

    <!-- Complete Profile View -->
    <string name="complete_profile_button">Complete SignUp</string>
    <string name="input_trello_username">Trello Username</string>
    <string name="input_trello_key">Trello key</string>
    <string name="input_trello_token">Trello token</string>
    <string name="complete_profile_text1">To obtain your key and token, visit :</string>
    <string name="complete_profile_text2">https://trello.com/app-key</string>

    <!-- Profile view -->
    <string name="update_profile_button">Update profile</string>
    <string name="signout_button">Sign out</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">My boards</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tasks">Tasks</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_members">Members</string>
    <string name="title_chat">Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
